--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/parser": "5.48.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.44.0",
     "typescript": "^4.7.4"
   }
 }
