--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@refinedev/nextjs-router": "^5.1.4",
     "@refinedev/react-hook-form": "^4.1.2",
     "@refinedev/supabase": "^5.0.0",
+    "cloudinary": "^1.37.3",
+    "formidable": "^3.5.0",
     "next": "^13.0.6",
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
