--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "keronote": "github:Media-Collab/keronote"
   },
   "devDependencies": {
     "@types/node": "^12.20.11",
